[CAN-108] Swipe Bugs and Mobile/Desktop Responsive Problem - Cards that are not the main card can still be Swipeable - Desktop not showing popup component Solution - Set new boolean to determine if cards should swipe or not - Use Tailwind to set display on different screen sizes for swipeable deck and popup component Note

--- a/app/styles/ClubCard.module.css
+++ b/app/styles/ClubCard.module.css
@@ -35,7 +35,6 @@
     left: 0;
     width: 40%;
     height: calc(92% - var(--navbar-height));
-    display: flex;
     margin-left: 5%;
     margin-top: 2%;
     margin-bottom: 2%;
